// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TreeList renders with builder mode style 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: start;
  justify-content: start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-height: 32px;
  width: 100%;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 4px;
  padding-bottom: 0;
  background-color: #f8f5ff80;
}

.emotion-1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 100%;
}

.emotion-2 {
  height: 100%;
  margin-left: 8px;
  border-left: solid 1px white;
  box-sizing: border-box;
  width: 3px;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-right: 4px;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 8px;
  height: 8px;
}

.emotion-4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 8px;
  position: relative;
  width: 8px;
}

.emotion-4::before {
  content: "";
  position: absolute;
  width: 16px;
  height: 16px;
  border-radius: 16px;
  top: 50%;
  left: 50%;
  -webkit-transform: translate(-50%, -50%);
  -moz-transform: translate(-50%, -50%);
  -ms-transform: translate(-50%, -50%);
  transform: translate(-50%, -50%);
  background-color: transparent;
  box-sizing: border-box;
  display: block;
}

.emotion-4:hover::before {
  background-color: #e5e6eb;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 8px;
  font-size: 8px;
  cursor: pointer;
  width: 8px;
  transform-origin: center;
  -webkit-transform: rotate(0deg);
  -moz-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
  -webkit-transition: -webkit-transform 200ms;
  transition: transform 200ms;
}

.emotion-6 {
  vertical-align: middle;
}

.emotion-7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 100%;
  width: 100%;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: start;
  justify-content: start;
}

.emotion-8 {
  font-size: 14px;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  height: 100%;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #1d2129;
  position: relative;
}

<div
  class="emotion-0"
>
  <div
    class="emotion-1"
  >
    <div
      class="emotion-2"
    />
  </div>
  <span
    class="emotion-3"
  >
    <span
      class="emotion-4"
    >
      <span
        class="emotion-5"
      >
        <svg
          class="emotion-6"
          color="currentColor"
          fill="none"
          height="1em"
          viewBox="0 0 8 8"
          width="1em"
        >
          <title>
            CaretDownIcon
          </title>
          <path
            d="M1.273 2.454A.3.3 0 0 1 1.53 2h4.94a.3.3 0 0 1 .257.454L4.343 6.428a.4.4 0 0 1-.686 0L1.273 2.454z"
            fill="currentColor"
          />
        </svg>
      </span>
    </span>
  </span>
  <div
    class="emotion-7"
  >
    <span
      class="emotion-8"
    >
      <span>
        0-0-0 
      </span>
    </span>
  </div>
</div>
`;

exports[`TreeList renders with builder mode style 2`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: start;
  justify-content: start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-height: 32px;
  width: 100%;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 0;
  padding-bottom: 0;
  background-color: #f8f5ff80;
}

.emotion-1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 100%;
}

.emotion-2 {
  height: 100%;
  margin-left: 8px;
  border-left: solid 1px white;
  box-sizing: border-box;
  width: 3px;
}

.emotion-4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 2px;
  font-size: 12px;
  visibility: hidden;
  margin-right: 4px;
  color: #1d2129;
  display: none;
  font-size: 8px;
}

.emotion-5 {
  vertical-align: middle;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 100%;
  width: 100%;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: start;
  justify-content: start;
}

.emotion-7 {
  font-size: 14px;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  height: 100%;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #1d2129;
  position: relative;
}

<div
  class="emotion-0"
>
  <div
    class="emotion-1"
  >
    <div
      class="emotion-2"
    />
    <div
      class="emotion-2"
    />
  </div>
  <span
    class="emotion-4"
  >
    <svg
      class="emotion-5"
      color="currentColor"
      fill="none"
      height="1em"
      viewBox="0 0 12 12"
      width="1em"
    >
      <title>
        LeafIcon
      </title>
      <path
        clip-rule="evenodd"
        d="M6.5 5a.5.5 0 0 1-.5-.5V2H3v8h6V5H6.5zm3.5-.5v6a.5.5 0 0 1-.5.5h-7a.5.5 0 0 1-.5-.5v-9a.5.5 0 0 1 .5-.5h4L10 4.5zM8.086 4 7 2.914V4h1.086z"
        fill="currentColor"
        fill-rule="evenodd"
      />
    </svg>
  </span>
  <div
    class="emotion-6"
  >
    <span
      class="emotion-7"
    >
      <span>
        <span>
          xixi
        </span>
      </span>
    </span>
  </div>
</div>
`;
